[package]
name = "api"
version = "0.1.0"
edition = "2024"
publish = false

[dependencies]
vespera = "0.1.17"
tokio = { version = "1.48", features = ["full"] }
tower-http = { version = "0.6", features = ["cors"] }
sea-orm = { version = "2.0.0-rc.26", features = ["runtime-tokio-rustls", "sqlx-postgres", "sqlx-sqlite", "macros", "chrono", "uuid"] }
vespertide = "0.1.20"

[build-dependencies]
vespera = "0.1.17"
